# wgpu-native

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  bors.toml  build.rs  cbindgen.toml  checks.py  meson.build  travis.yml
.github/workflows/: cd.yml  ci.yml
distribution/: CMakeLists.txt  README.md
examples/: CMakeLists.txt  framework.c  framework.h  helper.h  unused.h
examples/capture/: .gitattributes  .gitignore  CMakeLists.txt  main.c
examples/compute/: CMakeLists.txt  main.c  shader.wgsl
examples/enumerate_adapters/: CMakeLists.txt  main.c
examples/framework/: CMakeLists.txt  framework.c  framework.h
examples/helper/: Cargo.toml
examples/helper/src/: lib.rs
examples/push_constants/: CMakeLists.txt  main.c  shader.wgsl
examples/py/: README.md  buffer_mapping.py  create_device.py  wgpu_native.py
examples/remote/: main.c
examples/texture_arrays/: CMakeLists.txt  main.c
examples/triangle/: CMakeLists.txt  main.c  shader.wgsl
ffi/: Makefile  meson.build  wgpu.h  wgpu.yml
src/: command.rs  conv.rs  device.rs  enums.rs  lib.rs  logging.rs  unimplemented.rs  utils.rs
